tests/miniJava/neg/004386_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public return java ( ) { return 0 ; } }
